--- a/src/info.plist
+++ b/src/info.plist
@@ -174,6 +174,8 @@
 				<false/>
 				<key>clipboardtext</key>
 				<string>{query}</string>
+				<key>ignoredynamicplaceholders</key>
+				<false/>
 				<key>transient</key>
 				<false/>
 			</dict>
@@ -235,7 +237,7 @@
 echo "http_proxy=$http_proxy"&gt;&amp;2
 echo "https_proxy=$https_proxy"&gt;&amp;2
 
-/usr/bin/python convert.py "$1"</string>
+/usr/local/bin/python3 convert.py "$1"</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
@@ -638,7 +640,7 @@ UPDATE_INTERVAL is the number of minutes between exchange rate updates.</string>
 	<key>variables</key>
 	<dict>
 		<key>APP_KEY</key>
-		<string></string>
+		<string>c00b9eb974f0428b9892eeccd053e875</string>
 		<key>COPY_UNIT</key>
 		<string></string>
 		<key>CURRENCY_DECIMAL_PLACES</key>
